# murk

./: .gitignore  ASSESSMENT.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  DOLT_REMOTE.md  LICENSE  LICENSE-APACHE  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  THREAT_MODEL.md  VERIFYING.md  cliff.toml  deny.toml  direnv.tape  github.tape  hero.tape  install.sh  kadgc1afbjblamrjtqjtmj7mj25tbkdl.darc  mallory.tape  manifest  murk.pyi  offboard.tape  offboarding.tape  pyproject.toml  setup.sh  setup.tape  team.tape  teams.tape
.cargo/: config.toml
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/formula/: murk.rb.template
.github/vhs/: Dockerfile
.github/workflows/: ci.yaml  ci.yml  codeql.yaml  dependabot-automerge.yaml  dependabot-automerge.yml  docs-preview.yaml  docs.yaml  fuzz.yaml  node.yaml  python.yaml  release.yaml  release.yml  scorecard.yaml
demo/: agent-exec.tape  agent-plan.tape  agent-scan.tape  direnv.tape  eve.tape  github.tape  hero.tape  mallory.tape  offboard.tape  recovery.tape  setup.sh  setup.tape  ssh.tape  team.tape  theme.tape
docs/: ai-agents.md  cli-reference.md  cli-style.md  env-reference.md  quick-start.md
docs-site/: .gitignore  astro.config.mjs  package-lock.json  package.json
docs-site/public/: _headers  robots.txt
docs-site/scripts/: sync-generated-docs.mjs
docs-site/src/components/: ThemeSelect.astro
docs-site/src/content/docs/: changelog.md  index.mdx  install.md  quick-start.mdx  roadmap.md
docs-site/src/content/docs/concepts/: env-vars.md  grants.md  how-it-works.md  recipients-signatures.md  vault-format.md
docs-site/src/content/docs/guides/: ai-agents-mcp.md  cicd.md  direnv.md  git-merge-ssh.md  hardware-keys.md  offboarding.md  recovery.md  shared-vs-scoped.md  teams.md
docs-site/src/content/docs/reference/: bindings.md  completions-man.md
docs-site/src/content/docs/security/: threat-model.md  verifying.md
docs-site/src/styles/: brand.css
docs/completions/: _murk  _murk.ps1  murk.bash  murk.elv  murk.fish
docs/man/: murk-add.1  murk-agent-exec.1  murk-agent-grant.1  murk-agent-init.1  murk-agent-ls.1  murk-agent-plan.1  murk-agent-revoke.1  murk-agent.1  murk-circle-authorize.1  murk-circle-revoke.1  murk-circle.1  murk-completion-generate.1  murk-completion-install.1  murk-completion.1  murk-describe.1  murk-diff.1  murk-doctor.1  murk-edit.1  murk-env.1  murk-exec.1  murk-export.1  murk-generate.1  murk-get.1  murk-group-add.1  murk-group-create.1  murk-group-ls.1  murk-group-rm.1  murk-group.1  murk-import.1  murk-info.1  murk-init.1  murk-ls.1  murk-mcp.1  murk-policy-clear.1  murk-policy-set.1  murk-policy-show.1  murk-policy.1  murk-recover.1  murk-restore.1  murk-rm.1  (+6 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_env_parse.rs  fuzz_merge.rs  fuzz_recipient_parse.rs  fuzz_recovery.rs  fuzz_vault_parse.rs
hooks/: pre-commit
node/: Cargo.toml  README.md  biome.json  index.d.ts  index.js  package-lock.json  package.json
node/__test__/: index.test.mjs
node/src/: lib.rs
python/: README.md
python/tests/: conftest.py  test_murk.py
scripts/: bump-version.sh  check-guide-commands.cjs  check-no-local-refs.cjs  check-versions.cjs
src/: agent.rs  cli.rs  codename.rs  crypto.rs  edit.rs  env.rs  error.rs  export.rs  git.rs  github.rs  grants.rs  groups.rs  hardening.rs  info.rs  init.rs  integrity.rs  lib.rs  main.rs  mcp.rs  merge.rs  pins.rs  policy.rs  python.rs  recipients.rs  recovery.rs  scan.rs  secrets.rs  signing.rs  testutil.rs  types.rs  vault.rs
tests/: adversarial.rs  cli.rs  invariants.rs  mcp_interop.rs
tests/common/: mod.rs
