[package]
name = "murk-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Encrypted secrets manager for developers — one file, age encryption, git-friendly"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iicky/murk"
keywords = ["secrets", "encryption", "age", "dotenv", "security"]
categories = ["command-line-utilities", "cryptography"]
exclude = ["CLAUDE.md", "AGENTS.md", "SPEC.md", ".beads/"]

[lib]
name = "murk_cli"
path = "src/lib.rs"

[[bin]]
name = "murk"
path = "src/main.rs"

[dependencies]
age = "0.11.2"
base64 = "0.22.1"
bech32 = "0.11.1"
bip39 = "2.2.2"
clap = { version = "4.5.60", features = ["derive", "env"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
colored = "3"
rand = "0.10.0"
rpassword = "7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
