[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "murk-secrets"
dynamic = ["version"]
description = "Python bindings for murk — encrypted secrets manager"
readme = "python/README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]
keywords = ["secrets", "encryption", "age", "dotenv", "security"]

[project.urls]
Homepage = "https://github.com/iicky/murk"
Repository = "https://github.com/iicky/murk"
Issues = "https://github.com/iicky/murk/issues"

[tool.maturin]
features = ["python"]
module-name = "murk"
bindings = "pyo3"

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
