[package]
name = "murk-cli-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.murk-cli]
path = ".."

[[bin]]
name = "fuzz_vault_parse"
path = "fuzz_targets/fuzz_vault_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_env_parse"
path = "fuzz_targets/fuzz_env_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_merge"
path = "fuzz_targets/fuzz_merge.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_recipient_parse"
path = "fuzz_targets/fuzz_recipient_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_recovery"
path = "fuzz_targets/fuzz_recovery.rs"
test = false
doc = false
bench = false
