[package]
name = "murk-cli-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

# Stand alone as its own workspace root. The parent Cargo.toml excludes `fuzz`,
# and without this cargo-fuzz fails to build with "current package believes it's
# in a workspace when it's not".
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.murk-cli]
path = ".."

[[bin]]
name = "fuzz_vault_parse"
path = "fuzz_targets/fuzz_vault_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_env_parse"
path = "fuzz_targets/fuzz_env_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_merge"
path = "fuzz_targets/fuzz_merge.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_recipient_parse"
path = "fuzz_targets/fuzz_recipient_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_recovery"
path = "fuzz_targets/fuzz_recovery.rs"
test = false
doc = false
bench = false
