[package]
name = "murk-napi"
version = "0.5.4"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
murk-cli = { path = ".." }
napi = { version = "2", default-features = false, features = ["napi9"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
